# rs-medium-web-service

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.cargo/: config.toml
cmd/server/: Cargo.toml  database.rs  errors.rs  main.rs  router.rs  scheduler.rs  server.rs  webapp.rs  worker.rs
cmd/server/authentication/: auth_extractor.rs  handlers.rs  mod.rs  model.rs  route.rs
cmd/server/migrations/: 20250421054235_init.sql
cmd/server/todos/: handlers.rs  route.rs
cmd/server/users/: handlers.rs  mod.rs  route.rs
libs/hello/: Cargo.toml  hello.rs
libs/queue/: Cargo.toml  error.rs  postgres_queue.rs  queue.rs
services/todos/: Cargo.toml  model.rs  repository.rs  service.rs  tests.rs
services/user/: Cargo.toml  get_user_by_id.rs  get_users.rs  model.rs  user_repository.rs  user_service.rs
