[workspace]
resolver = "2"
members = [
    "cmd/*",
    "libs/*",
    "services/*",
]

[workspace.package]
name = "rs-project-skeleton"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] } # A serialization/deserialization framework.
serde_json = "1.0.140" # Serde serialization/deserialization of JSON data.
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "any", "postgres"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
axum = { version = "0.8.3", features = ["macros"] } # Web framework that focuses on ergonomics and modularity.