[workspace]
resolver = "2"
members = [
    "cmd/*",
    "libs/*",
    "services/*",
]

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] } # A serialization/deserialization framework.
serde_json = "1.0.140" # Serde serialization/deserialization of JSON data.
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "any", "postgres", "chrono", "uuid"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
axum = { version = "0.8.3", features = ["macros"] } # Web framework that focuses on ergonomics and modularity.
chrono = { version = "0.4.40", features = ["clock", "serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }