[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
hyper = { version = "1.6.0", features = ["full"] } # A fast and correct HTTP library.
tokio = { workspace = true }
tower = "0.5.2" # Modular reusable components for building robust clients and servers.
once_cell = { version = "~1.21.3" } # Single assignment cells and lazy values.
base64 = { version = "~0.22.1" } # Encode and decode base64 as bytes or utf8.
http = "~1.3.1" # Types for HTTP requests and responses.
tracing = { version = "~0.1.41" } #  Application-level tracing for Rust.
tracing-subscriber = { version = "~0.3.19", features = ["env-filter"] } # Utilities for `tracing` subscribers. 
sqlx = { workspace = true }
serde = { workspace = true } # A serialization/deserialization framework.
serde_json = { workspace = true } # Serde serialization/deserialization of JSON data.

todo_service = { path = "../../services/todos" }
hello = { path = "../../libs/hello" }
tower-http = { version = "0.6.2", features = ["cors"] }
dotenvy = "0.15.7"
anyhow = { workspace = true }

[[bin]]
name = "server"
path = "main.rs"
