[package]
name = "queue"
version = "0.1.0"
edition = "2021"

[lib]
name = "queue"
path = "queue.rs"

[dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json"] }
thiserror.workspace = true
futures = { workspace = true }
ulid = { workspace = true, features = ["uuid"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1.88"
