[package]
name = "todo_service"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "todo_service"
path = "service.rs"

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }